js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-return-typeof-import-call-source-property.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
return
typeof
import
.
source
.
UNKNOWN
;
}
